Revert "fixed the relation bug and modified docs"
This reverts commit d65b21adb13e7f41bb9e6ac5237f6fb204de3943.
